--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <title>SunLight | Online store </title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="formsheet" type="text/css" href="form.html">
-    
 </head>
 
 <body>
@@ -42,8 +40,7 @@
             <input type="password" name="" placeholder="Enter Password Here">
             <p><a href="" class="btnn">Login</a></p><br>
             <p1 class="link">Don't have an account<br>
-            <a href="form.html">Sign up here</a></p1>
-            
+            <a href="form.php" target="_blank">Sign up here</a></p1>
         </div>
         </div>
     </div>  
