--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <input type="password" name="" placeholder="Enter Password Here">
             <p><a href="" class="btnn">Login</a></p><br>
             <p1 class="link">Don't have an account<br>
-            <a href="form.php" target="_blank">Sign up here</a></p1>
+            <a href="form.html" target="_blank">Sign up here</a></p1>
         </div>
         </div>
     </div>  
