--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <input type="password" name="" placeholder="Enter Password Here">
             <p><a href="" class="btnn">Login</a></p><br>
             <p1 class="link">Don't have an account<br>
-            <a href="formTest.php" target="_blank">Sign up here</a></p1>
+            <a href="form.php" target="_blank">Sign up here</a></p1>
         </div>
         </div>
     </div>  
@@ -198,3 +198,4 @@
     } 
 
     </script> 
+
